# pwe-optimization

./: CMakeLists.txt  README.md  main.cpp
GraphDirectory/: Graph.cpp  Graph.h  Node.h  Room.cpp  TileConfig.h
Graphs_15x10x5/Rx_4/Tiles_16/: Graph_0.json
PropagationDirectory/: ModeHandler.h  Ray.h  RayHandler.h
include/Graph/: Edge.h  Graph.h  Node.h  Room.h  TxConfig.h
include/Propagation/: ModeHandler.h  Ray.h  RayHandler.h  SystemState.h
src/Graph/: Edge.cpp  Node.cpp  TileConfig.cpp  TxConfig.cpp
src/Propagation/: ModeHandler.cpp  Ray.cpp  RayHandler.cpp  SystemState.cpp
